make.log
clang++ -std=c++17 -Wall -c menu.cpp -o menu.o
In file included from menu.cpp:6:
./BitSequence.cpp:33:49: error: allocating an object of abstract class type 'BitSequence'
   33 |             BitSequence* new_bit_sequence = new BitSequence();
      |                                                 ^
./sequence.h:18:24: note: unimplemented pure virtual method 'Instance' in 'BitSequence'
   18 |   virtual Sequence<T> *Instance() const = 0;
      |                        ^
In file included from menu.cpp:6:
./BitSequence.cpp:44:49: error: allocating an object of abstract class type 'BitSequence'
   44 |             BitSequence* new_bit_sequence = new BitSequence();
      |                                                 ^
./BitSequence.cpp:55:49: error: allocating an object of abstract class type 'BitSequence'
   55 |             BitSequence* new_bit_sequence = new BitSequence();
      |                                                 ^
./BitSequence.cpp:66:49: error: allocating an object of abstract class type 'BitSequence'
   66 |             BitSequence* new_bit_sequence = new BitSequence();
      |                                                 ^
menu.cpp:25:42: error: allocating an object of abstract class type 'MutableArraySequence<int>'
   25 |     MutableArraySequence<int>* arr = new MutableArraySequence<int>();
      |                                          ^
./sequence.h:18:24: note: unimplemented pure virtual method 'Instance' in 'MutableArraySequence'
   18 |   virtual Sequence<T> *Instance() const = 0;
      |                        ^
menu.cpp:68:42: error: allocating an object of abstract class type 'MutableListSequence<int>'
   68 |     MutableListSequence<int>* list = new MutableListSequence<int>();
      |                                          ^
./sequence.h:18:24: note: unimplemented pure virtual method 'Instance' in 'MutableListSequence'
   18 |   virtual Sequence<T> *Instance() const = 0;
      |                        ^
menu.cpp:107:30: error: allocating an object of abstract class type 'BitSequence'
  107 |     BitSequence* bits1 = new BitSequence();
      |                              ^
menu.cpp:108:30: error: allocating an object of abstract class type 'BitSequence'
  108 |     BitSequence* bits2 = new BitSequence();
      |                              ^
In file included from menu.cpp:4:
./MutableArraySequence.h:89:46: error: allocating an object of abstract class type 'MutableArraySequence<int>'
   89 |     MutableArraySequence<T> *new_array = new MutableArraySequence<T>();
      |                                              ^
menu.cpp:47:42: note: in instantiation of member function 'MutableArraySequence<int>::Map' requested here
   47 |             Sequence<int>* mapped = arr->Map(MultiplyBy10);
      |                                          ^
In file included from menu.cpp:4:
./MutableArraySequence.h:98:46: error: allocating an object of abstract class type 'MutableArraySequence<int>'
   98 |     MutableArraySequence<T> *new_array = new MutableArraySequence<T>();
      |                                              ^
menu.cpp:53:44: note: in instantiation of member function 'MutableArraySequence<int>::Where' requested here
   53 |             Sequence<int>* filtered = arr->Where(IsEven);
      |                                            ^
In file included from menu.cpp:4:
./MutableArraySequence.h:44:43: error: allocating an object of abstract class type 'MutableArraySequence<int>'
   44 |     MutableArraySequence<T> *result = new MutableArraySequence<T>();
      |                                           ^
./MutableArraySequence.h:27:3: note: in instantiation of member function 'MutableArraySequence<int>::GetSubsequence' requested here
   27 |   ~MutableArraySequence() { delete this->items; }
      |   ^
menu.cpp:63:5: note: in instantiation of member function 'MutableArraySequence<int>::~MutableArraySequence' requested here
   63 |     delete arr;
      |     ^
In file included from menu.cpp:4:
./MutableArraySequence.h:81:46: error: allocating an object of abstract class type 'MutableArraySequence<int>'
   81 |     MutableArraySequence<T> *new_array = new MutableArraySequence<T>(*this);
      |                                              ^
./MutableArraySequence.h:27:3: note: in instantiation of member function 'MutableArraySequence<int>::Concat' requested here
   27 |   ~MutableArraySequence() { delete this->items; }
      |   ^
menu.cpp:63:5: note: in instantiation of member function 'MutableArraySequence<int>::~MutableArraySequence' requested here
   63 |     delete arr;
      |     ^
In file included from menu.cpp:5:
./MutableListSequence.h:58:42: error: allocating an object of abstract class type 'MutableListSequence<int>'
   58 |     MutableListSequence<T> *result = new MutableListSequence<T>(*sub_list);
      |                                          ^
menu.cpp:94:44: note: in instantiation of member function 'MutableListSequence<int>::GetSubsequence' requested here
   94 |                 Sequence<int>* sub = list->GetSubsequence(start, end);
      |                                            ^
In file included from menu.cpp:5:
./MutableListSequence.h:68:42: error: allocating an object of abstract class type 'MutableListSequence<int>'
   68 |     MutableListSequence<T> *result = new MutableListSequence<T>(*this->items);
      |                                          ^
./MutableListSequence.h:27:3: note: in instantiation of member function 'MutableListSequence<int>::Concat' requested here
   27 |   ~MutableListSequence() { delete this->items; }
      |   ^
menu.cpp:102:5: note: in instantiation of member function 'MutableListSequence<int>::~MutableListSequence' requested here
  102 |     delete list;
      |     ^
In file included from menu.cpp:5:
./MutableListSequence.h:79:44: error: allocating an object of abstract class type 'MutableListSequence<int>'
   79 |     MutableListSequence<T> *new_list = new MutableListSequence<T>();
      |                                            ^
./MutableListSequence.h:27:3: note: in instantiation of member function 'MutableListSequence<int>::Map' requested here
   27 |   ~MutableListSequence() { delete this->items; }
      |   ^
menu.cpp:102:5: note: in instantiation of member function 'MutableListSequence<int>::~MutableListSequence' requested here
  102 |     delete list;
      |     ^
In file included from menu.cpp:5:
./MutableListSequence.h:87:44: error: allocating an object of abstract class type 'MutableListSequence<int>'
   87 |     MutableListSequence<T> *new_list = new MutableListSequence<T>();
      |                                            ^
./MutableListSequence.h:27:3: note: in instantiation of member function 'MutableListSequence<int>::Where' requested here
   27 |   ~MutableListSequence() { delete this->items; }
      |   ^
menu.cpp:102:5: note: in instantiation of member function 'MutableListSequence<int>::~MutableListSequence' requested here
  102 |     delete list;
      |     ^
In file included from menu.cpp:4:
./MutableArraySequence.h:44:43: error: allocating an object of abstract class type 'MutableArraySequence<Bit>'
   44 |     MutableArraySequence<T> *result = new MutableArraySequence<T>();
      |                                           ^
./BitSequence.cpp:30:9: note: in instantiation of member function 'MutableArraySequence<Bit>::GetSubsequence' requested here
   30 |         BitSequence() : MutableArraySequence<Bit>() {}
      |         ^
./sequence.h:18:24: note: unimplemented pure virtual method 'Instance' in 'MutableArraySequence'
   18 |   virtual Sequence<T> *Instance() const = 0;
      |                        ^
In file included from menu.cpp:4:
./MutableArraySequence.h:81:46: error: allocating an object of abstract class type 'MutableArraySequence<Bit>'
   81 |     MutableArraySequence<T> *new_array = new MutableArraySequence<T>(*this);
      |                                              ^
./BitSequence.cpp:30:9: note: in instantiation of member function 'MutableArraySequence<Bit>::Concat' requested here
   30 |         BitSequence() : MutableArraySequence<Bit>() {}
      |         ^
In file included from menu.cpp:4:
./MutableArraySequence.h:89:46: error: allocating an object of abstract class type 'MutableArraySequence<Bit>'
   89 |     MutableArraySequence<T> *new_array = new MutableArraySequence<T>();
      |                                              ^
./BitSequence.cpp:30:9: note: in instantiation of member function 'MutableArraySequence<Bit>::Map' requested here
   30 |         BitSequence() : MutableArraySequence<Bit>() {}
      |         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [menu.o] Error 1
